fixed the flickering a bit but broke the texts for edit tasks and still flickers header1, top right buttons, search, and for some reason the back button for folders

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -201,7 +201,7 @@ body {
     font-weight: 400;
 }
 
-body.dark-mode  {
+.dark-mode body {
     background-color: var(--dark-background-color);
 }   
 
